# sui-connector

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  manifest.yaml
.github/workflows/: sui.yml
src/: main.rs
src/event/: event.proto  event.rs  event_json.rs  mod.rs
src/pool/: mod.rs  pool.proto  pool.rs  pool_json.rs
src/sui_system/: ValidatorSet.proto  mod.rs  validator_set.rs  validator_set_json.rs
