[package]
name = "sui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", default-features = false }
clap = "4.2.4"
fastcrypto = "0.1.4"
futures = "0.3"
hex = "0.4.3"
log = "0.4.17"
move-core-types = "0.0.3"
nakji-connector = { git = "https://github.com/nakji-network/connector-rust.git", rev = "0bec162" }
protobuf = "3.2.0"
protobuf-json-mapping = "3.2.0"
serde = "1.0.160"
serde_json = "1.0.96"
stderrlog = "0.5.4"
sui-sdk = { git = "https://github.com/MystenLabs/sui.git", rev = "sui-v1.0.0" }
time = "0.3.20"
tokio = { version = "1", features = ["full"] }
